--- a/app/src/main/res/layout/activity_recover_password_activiy.xml
+++ b/app/src/main/res/layout/activity_recover_password_activiy.xml
@@ -6,55 +6,46 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorTan"
-    tools:context=".TasksListActivity">
+    tools:context=".RecoverPasswordActiviy">
 
     <TextView
-        android:id="@+id/tv_title"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="Sua Lista de Tarefas"
-        android:textColor="@color/orangeSunset"
+        android:layout_marginTop="20dp"
+        android:text="Recuperar Senha"
         android:textSize="30sp"
-        android:textStyle="italic|bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></TextView>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_tasks"
-        android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/edt_email_to_recover_password"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="40dp"
+        android:layout_margin="15dp"
+        android:hint="Digite seu Email"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title">
-
-    </androidx.recyclerview.widget.RecyclerView>
+        app:layout_constraintTop_toBottomOf="@+id/textView2"></com.google.android.material.textfield.TextInputEditText>
 
     <Button
+        android:id="@+id/btn_recover_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_shop_list"
-        android:text="Lista de Compras"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Recuperar senha"
         android:backgroundTint="@color/orangeSunset"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline3"></Button>
+        app:layout_constraintTop_toTopOf="@+id/guideline5">
 
-    <Button
-        android:backgroundTint="@color/orangeSunset"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-        android:id="@+id/btn_botton_sheet"
-        android:text="+"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"></Button>
+    </Button>
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline3"
+        android:id="@+id/guideline5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="90dp" />
+        app:layout_constraintGuide_begin="242dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
